<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UNM CLSA</string>
    <string name="menu_main">Main Menu</string>
    <string name="sub_name">Destinations</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="destination_list">Destinations</string>
    <string name="action_search">Search</string>
    <string name="action_help"><b>Help Page</b></string>
    <string name="name">List by Name</string>
    <string name="abbr">List by Abbr</string>
    <string name="sort">Sort</string>
    <string name="buildings">All Buildings</string>
    <string name="parking">Parking</string>
    <string name="computers">Computer Pods</string>
    <string name="food">Dining</string>
    <string name="libraries">Libraries</string>
    <string name="dorms">Housing</string>
    <string name="no_connection">No Network Connection!</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try Again</string>
    
    <string name="help_body"><b>\t Welcome to our help page and thank you for using our app.
	    	We are currently in the development phase of our project and
	    	will have a beta-tested app available for download at the 
	    	Google Play Store by April 2015. If you have any questions or 
	    	are experiencing technical issues with the app, feel free to 
	    	contact us at \n ece.419.seniordesign@gmail.com.
	    	\n \n Thank you,\n ECE Senior Design Group \n</b></string>

</resources>